--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "platform-boilerplate",
   "private": true,
   "scripts": {
+    "test": "pnpm run core && pnpm run ui && pnpm run server && pnpm run app && pnpm run exec",
     "app": "pnpm --filter platform-app exec ts-node src/index.ts",
     "exec": "pnpm --filter platform-exec exec ts-node src/index.ts",
     "server": "pnpm --filter platform-server exec ts-node src/index.ts",
