--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -2,5 +2,9 @@
   "name": "platform-core",
   "version": "0.0.0",
   "private": true,
-  "main": "src/index.ts"
-} 
+  "main": "src/index.ts",
+  "devDependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/node": "^20.11.30"
+  }
+}
