--- a/platform-server/package.json
+++ b/platform-server/package.json
@@ -2,8 +2,22 @@
   "name": "platform-server",
   "version": "0.0.0",
   "private": true,
-  "main": "src/index.ts",
+  "main": "dist/server.js",
+  "scripts": {
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
   "dependencies": {
-    "platform-core": "workspace:*"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^4.17.23",
+    "@types/node": "^20.19.0",
+    "nodemon": "^3.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.0"
   }
-} 
+}
