--- a/apps/platform-app/package.json
+++ b/apps/platform-app/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "main": "src/index.ts",
   "dependencies": {
-    "platform-ui": "workspace:*"
+    "@platform/ui": "workspace:*",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0"
   }
 } 
