--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "core": "pnpm --filter platform-core exec ts-node src/index.ts"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 } 
