--- a/packages/platform-ui/package.json
+++ b/packages/platform-ui/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "platform-ui",
+  "name": "@platform/ui",
   "version": "0.0.0",
   "private": true,
   "main": "src/index.ts",
   "dependencies": {
-    "platform-core": "workspace:*"
+    "@platform/core": "workspace:*"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.1"
   }
 } 
