--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5",
+    "typescript": "^5.8.3",
     "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2"
   }
