--- a/platform-server/package.json
+++ b/platform-server/package.json
@@ -2,9 +2,10 @@
   "name": "platform-server",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
+    "dev": "nodemon --watch src --ext ts --exec 'node --loader ts-node/esm src/server.ts'",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -19,7 +20,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.0",
+    "typescript": "^5.8.3",
     "vite": "^5.0.0"
   }
 }
