--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "ESNext",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
       "@platform/core": ["packages/platform-core/src/index.ts"],
       "@platform/core/*": ["packages/platform-core/src/*"],
       "@platform/ui": ["packages/platform-ui/src/index.ts"],
+      "@platform/ui/components": ["packages/platform-ui/src/components/index.ts"],
       "@platform/ui/*": ["packages/platform-ui/src/*"]
     }
   }
