feat(ui): refactor component exports and imports
Refactored the UI package to support namespaced and direct component imports. Updated all applications and packages to use the new scoped import paths (e.g., '@platform/ui/components'). Converted the HelloShared component to use explicit React.FC typing.

--- a/apps/platform-app/tsconfig.json
+++ b/apps/platform-app/tsconfig.json
@@ -5,12 +5,7 @@
     "baseUrl": "./src",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "paths": {
-      "platform-ui": ["../../packages/platform-ui"],
-      "platform-ui/*": ["../../packages/platform-ui/src/*"]
-    }
+    "resolveJsonModule": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
