--- a/packages/platform-ui/package.json
+++ b/packages/platform-ui/package.json
@@ -2,7 +2,11 @@
   "name": "@platform/ui",
   "version": "0.0.0",
   "private": true,
-  "main": "src/index.ts",
+  "main": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./components": "./src/components/index.ts"
+  },
   "dependencies": {
     "@platform/core": "workspace:*"
   },
