--- a/apps/platform-app/package.json
+++ b/apps/platform-app/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "@platform/ui": "workspace:*",
+    "@platform/core": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
