--- a/apps/platform-exec/tsconfig.json
+++ b/apps/platform-exec/tsconfig.json
@@ -1,17 +1,20 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "moduleResolution": "bundler",
+    "strict": true,
+    "skipLibCheck": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
+    "baseUrl": "./src",
     "paths": {
-      "@platform/ui": ["../../packages/platform-ui"],
-      "@platform/ui/*": ["../../packages/platform-ui/src/*"]
+      "@/*": ["./*"]
     }
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
