--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "exec": "pnpm --filter platform-exec exec ts-node src/index.ts",
     "server": "pnpm --filter platform-server exec ts-node src/index.ts",
     "ui": "pnpm --filter platform-ui exec ts-node src/index.ts",
-    "core": "pnpm --filter platform-core exec ts-node src/index.ts"
+    "core": "pnpm --filter platform-core exec ts-node src/index.ts",
+    "dev": "pnpm --filter platform-server run dev"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
