--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -2,7 +2,18 @@
   "name": "@platform/core",
   "version": "0.0.0",
   "private": true,
-  "main": "src/index.ts",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
+    },
+    "./tsconfig.json": "./tsconfig.json",
+    "./tsconfig.base.json": "./tsconfig.base.json"
+  },
   "devDependencies": {
     "@types/dotenv": "^8.2.3",
     "@types/node": "^20.11.30"
