--- a/platform-server/package.json
+++ b/platform-server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec 'node --loader ts-node/esm src/server.ts'",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -19,7 +19,7 @@
     "@types/node": "^20.19.0",
     "@vitejs/plugin-react": "^4.0.0",
     "nodemon": "^3.0.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.2",
     "typescript": "^5.8.3",
     "vite": "^5.0.0"
   }
